# sqlitewasmwasi

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  example.env  justfile  rust-toolchain.toml
.github/workflows/: run.yml
component/: Cargo.toml
component/src/: lib.rs
example-js/: index.js  package-lock.json  package.json  rollup.config.js
example-rust/: Cargo.toml
example-rust/src/: main.rs
examples/js-client/: index.js  package-lock.json  package.json
examples/rust-client/: Cargo.toml
examples/rust-client/src/: bindings.rs  main.rs
package-js/: .npmignore  README.md  index.js  package-lock.json  package.json  rollup.config.js  test.js
package-rust/: Cargo.toml  README.md
package-rust/src/: lib.rs
scripts/: test-example-js.sh  test-example-rust.sh  test-package-js.sh  test-package-rust.sh  test-wasmtime-js-client.sh  test-wasmtime-rust-client.sh  wasi-sdk.sh
sqlite-component/: Cargo.toml
sqlite-component/src/: lib.rs
wit/: sqlite.wit
